<resources>
    <string name="app_name">Lucid Brain</string>
    <string name="login_button">logged_in</string>
    <string name="signup_button">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="or">or</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Time to make your brain healthier!</string>

    <!-- Facebook ID -->
    <string name="facebook_app_id">399700197643671</string>
    <string name="fb_login_protocol_scheme">fb399700197643671</string>

    <!-- User Panel -->
    <string name="progress">My Progress</string>
    <string name="challenge">Daily Challenge</string>
    <string name="settings_user_panel">Settings</string>
    <string name="premium">Get Premium</string>
    <string name="nickname">Nickname</string>
    <string name="rank">Rank</string>
    <string name="avatar_description">Description</string>
    <string name="freetraining_button">Start Your Free Training</string>

    <!-- Preference Titles -->
    <string name="settings_header">Settings</string>


    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="sound_title">Sound</string>
    <string name="notifications_title">Notifications</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_user_panel">UserPanelActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Sign Up!</string>
    <string name="username">Username</string>
    <string name="cnf_password">Confirm password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_text">Sign In!</string>
    <string name="logout_btn">Log Out</string>
    <string name="exit_text">X</string>
    <string name="guess_text">Find out where pairs are and guess them all!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="points">Points:</string>
    <string name="confirm_btn">Confirm</string>
    <string name="answer_text">Write your answer!</string>
    <string name="text_to_fill">Kurs programowania Java stworzony został z myślą o osobach, które rozpoczynają swoją przygodę z programowaniem lub mają niewielkie doświadczenie z innym językiem programowania. W ramach kursu po wykupieniu dodatkowego pakietu oferujemy wsparcie merytoryczne - w razie problemów możesz nam zadawać nieograniczoną liczbę pytań. Kurs został zaktualizowany w kwietniu 2019r. i jest dostosowany do najnowszej wersji Javy.</string>
    <string name="fill_the_text">Fill the text!</string>
    <string name="stats_txt">My Progress</string>
    <string name="dailychallenge_text">Take a Part in Daily Challenge to Earn More Points!</string>
    <string name="areyouin">Are You In?</string>
    <string name="showdailychallengebutton">Show Me!</string>
    <string name="usernamechange">New nickname</string>
    <string name="passwordchange">New password</string>
    <string name="cnf_newpassword">Confirm new password</string>
    <string name="oldpassword">Old password</string>
    <string name="im_in">I\'m In!</string>
    <string name="sNo">No.</string>
    <string name="product">Find All Pairs</string>
    <string name="category">MathChain</string>
    <string name="price">Geomemotry</string>
    <string name="date">Date</string>
    <string name="alarm_on_toast">Daily notification at 8:30am is on!</string>
    <string name="alarm_off_toast">Daily notification is off!</string>
</resources>
