<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFF00"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pracainzynierska.inzynierka.UserPanelActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kulfon"
        tools:srcCompat="@drawable/kulfon" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/nickname"
        android:textSize="20sp"
        android:textColor="#807A26"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="Rank"
        android:textSize="20sp"
        android:textColor="#807A26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <Button
        android:id="@+id/progress_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/button_shape"
        android:text="@string/progress"
        android:textColor="#C2F1FF"
        app:layout_constraintEnd_toStartOf="@+id/challenge_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/challenge_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/button_shape"
        android:text="@string/challenge"
        android:textColor="#C2F1FF"
        app:layout_constraintEnd_toStartOf="@+id/settings_user_panel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_user_panel_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="272dp"
        android:layout_marginLeft="272dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/button_shape"
        android:text="@string/settings_user_panel"
        android:textColor="#C2F1FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/premium_button"
        android:layout_width="136dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/premium"
        android:textColor="#C2F1FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_freetraining_button" />

    <Button
        android:id="@+id/start_freetraining_button"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button_shape"
        android:text="@string/freetraining_button"
        android:textColor="#C2F1FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_button" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/logout_btn"
        android:textColor="#C2F1FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isDoneText"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>